jj.cppresult.txt
In file included from cur.cpp:15:0:
alexandr/jj.cpp:543:1: error: expected declaration before '}' token
 }*/
 ^
./check.sh: line 24: ./a.out: No such file or directory
